add stack count patch

--- a/ShopMenuOverhaul/i18n/default.json
+++ b/ShopMenuOverhaul/i18n/default.json
@@ -4,4 +4,6 @@
   "config.ShopItemPerRow.description": "Number of items per row when a price must be displayed (e.g. regular shops).",
   "config.DresserItemPerRow.name": "Dresser Item Per Row",
   "config.DresserItemPerRow.description": "Number of items per row when there are no prices (e.g. dressers, catalogues).",
+  "config.StackCount.name": "Stack Count on Shift+Ctrl",
+  "config.StackCount.description": "Number of items to buy when using Shift+Ctrl (vanilla 25).",
 }
