--- a/CompactSearchableShopMenu/i18n/zh.json
+++ b/CompactSearchableShopMenu/i18n/zh.json
@@ -8,7 +8,17 @@
   "config.StackCount.name": "Shift+Ctrl购买数",
   "config.StackCount.description": "用Shift+Ctrl时购买的数量(原版25)。",
   "config.EnableSearchAndFilters.name": "启用搜索和过滤",
-  "config.EnableSearchAndFilters.description": "启用搜索框和类别选项（当菜单没有自带类别时）。",
+  "config.EnableSearchAndFilters.description": "启用搜索框和类别选项（当菜单没有自带类别时）。此设定优先于以下设定。",
+  "config.EnableSearch.name": "启用搜索",
+  "config.EnableSearch.description": "启用搜索框。",
+  "config.SearchBoxOffset.name": "搜索框偏移",
+  "config.SearchBoxOffset.description": "调整搜索框的位置（默认0 0）",
+  "config.EnableTab.Category.name": "启用选项卡：类别",
+  "config.EnableTab.Category.description": "启用物品类别的选项卡。",
+  "config.EnableTab.DetailedSeeds.name": "启用选项卡：详细种子分类",
+  "config.EnableTab.DetailedSeeds.description": "启用将种子分为作物，树，和灌物的选项卡",
+  "config.EnableTab.Recipes.name": "启用选项卡：配方",
+  "config.EnableTab.Recipes.description": "启用配方的单独选项卡。",
   // ui
   "placeholder.search": "搜索..."
 }
