--- a/CompactSearchableShopMenu/i18n/default.json
+++ b/CompactSearchableShopMenu/i18n/default.json
@@ -30,7 +30,7 @@
   "config.EnableTab.Special.name": "Enable Tab: Special",
   "config.EnableTab.Special.description": "Enable mod added tabs.",
   "config.ShowDefaultTabIcon.name": "Show Default Tab Icon",
-  "config.ShowDefaultTabIcon.description": "Show a default icon when the tab has no associated item, this is sourced from 'mushymato.CompactSearchableShopMenu/icon/default' which you can edit via content patcher.",
+  "config.ShowDefaultTabIcon.description": "Show a default icon when the tab has no associated item.",
   // config fail messages
   "config.failed.Grid": "Failed to apply shop grid features, please report this to the mod page.",
   "config.failed.StackCount": "Failed to apply shop stack count features, please report this to the mod page.",
